# Car-Racing-and-AI

./: .env.example  .gitignore  BUG_FIXES_COMPLETE.md  CHANGELOG.md  FRONTEND_BUG_REPORT.md  PRODUCTION_READY.md  README.md  THIRD_PARTY_NOTICES.md  monza_2023_telemetry_demo.csv
.codex/environments/: environment.toml
.github/: dependabot.yml
.github/workflows/: dependency-update.yml  release.yml
backend/: .env.example  Dockerfile  __init__.py  config.py  pytest.ini  requirements.txt
backend/middleware/: __init__.py
backend/models/: __init__.py  chat.py  race_state.py  strategy.py
backend/routes/: __init__.py  (+4 more)
docs/: API.md  AUDIT_REPORT.md  DATABASE_SETUP.md  DEPLOYMENT.md  HTTPS_TLS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  tailwind.config.js
pitMind/: .dockerignore  DEPLOYMENT_COMMANDS.sh  README.md  docker-compose.prod.yml  docker-compose.yml
qiskit implementation/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-quantum.txt  requirements.txt
qiskit implementation/examples/: sandbox_request.json
qiskit implementation/src/veritaspen_quantum/: __init__.py  api.py  config.py  models.py  service.py
qiskit implementation/src/veritaspen_quantum/optimization/: __init__.py  classical.py  qiskit_adapter.py
qiskit implementation/tests/: test_optimizer.py
scripts/: create_secret.bat  deploy_ibm_ce.sh  deploy_ibm_cloud.ps1  deploy_vsi.sh  run-local.ps1  run-replay.ps1
(+135 files in other folders)
