[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritaspen-quantum"
version = "0.1.0"
description = "Quantum-inspired Formula 1 strategy research layer for VeritasPen."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
quantum = [
  "qiskit>=1.2",
  "qiskit-aer>=0.14",
  "qiskit-optimization>=0.6"
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

